// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScopeExpression renders when empty list of filter IDs is supplied 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="m"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    className="scope-field-checkbox"
    component="div"
    grow={false}
  >
    <EuiCheckbox
      checked={true}
      compressed={false}
      disabled={false}
      id="scope_cb_domain"
      indeterminate={false}
      onChange={[Function]}
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiExpressionButton
      buttonValue="domain"
      className="scope-field-button"
      description="when"
      isActive={false}
      onClick={[Function]}
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`ScopeExpression renders when enabled set to false 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="m"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    className="scope-field-checkbox"
    component="div"
    grow={false}
  >
    <EuiCheckbox
      checked={false}
      compressed={false}
      disabled={false}
      id="scope_cb_domain"
      indeterminate={false}
      onChange={[Function]}
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiExpressionButton
      buttonValue="domain"
      className="scope-field-button"
      description="when"
      isActive={false}
      onClick={[Function]}
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiExpressionButton
          buttonValue="safe_domains"
          description="is in"
          isActive={false}
          onClick={[Function]}
        />
      }
      closePopover={[Function]}
      hasArrow={true}
      id="operatorValuePopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
      withTitle={true}
    >
      <div
        style={
          Object {
            "zIndex": "200",
          }
        }
      >
        <EuiPopoverTitle>
          Is
        </EuiPopoverTitle>
        <EuiExpression>
          <EuiFlexGroup
            alignItems="stretch"
            component="div"
            direction="row"
            gutterSize="l"
            justifyContent="flexStart"
            responsive={true}
            style={
              Object {
                "maxWidth": 450,
              }
            }
            wrap={false}
          >
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 150,
                }
              }
            >
              <EuiSelect
                compressed={false}
                fullWidth={false}
                hasNoInitialSelection={false}
                isLoading={false}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "text": "in",
                      "value": "include",
                    },
                    Object {
                      "text": "not in",
                      "value": "exclude",
                    },
                  ]
                }
                value="include"
              />
            </EuiFlexItem>
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 300,
                }
              }
            >
              <EuiSelect
                compressed={false}
                fullWidth={false}
                hasNoInitialSelection={false}
                isLoading={false}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "text": "web_domains",
                      "value": "web_domains",
                    },
                    Object {
                      "text": "safe_domains",
                      "value": "safe_domains",
                    },
                    Object {
                      "text": "uk_domains",
                      "value": "uk_domains",
                    },
                  ]
                }
                value="safe_domains"
              />
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiExpression>
      </div>
    </EuiPopover>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`ScopeExpression renders when filter ID and type supplied 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="m"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    className="scope-field-checkbox"
    component="div"
    grow={false}
  >
    <EuiCheckbox
      checked={true}
      compressed={false}
      disabled={false}
      id="scope_cb_domain"
      indeterminate={false}
      onChange={[Function]}
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiExpressionButton
      buttonValue="domain"
      className="scope-field-button"
      description="when"
      isActive={false}
      onClick={[Function]}
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiExpressionButton
          buttonValue="safe_domains"
          description="is in"
          isActive={false}
          onClick={[Function]}
        />
      }
      closePopover={[Function]}
      hasArrow={true}
      id="operatorValuePopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
      withTitle={true}
    >
      <div
        style={
          Object {
            "zIndex": "200",
          }
        }
      >
        <EuiPopoverTitle>
          Is
        </EuiPopoverTitle>
        <EuiExpression>
          <EuiFlexGroup
            alignItems="stretch"
            component="div"
            direction="row"
            gutterSize="l"
            justifyContent="flexStart"
            responsive={true}
            style={
              Object {
                "maxWidth": 450,
              }
            }
            wrap={false}
          >
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 150,
                }
              }
            >
              <EuiSelect
                compressed={false}
                fullWidth={false}
                hasNoInitialSelection={false}
                isLoading={false}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "text": "in",
                      "value": "include",
                    },
                    Object {
                      "text": "not in",
                      "value": "exclude",
                    },
                  ]
                }
                value="include"
              />
            </EuiFlexItem>
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 300,
                }
              }
            >
              <EuiSelect
                compressed={false}
                fullWidth={false}
                hasNoInitialSelection={false}
                isLoading={false}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "text": "web_domains",
                      "value": "web_domains",
                    },
                    Object {
                      "text": "safe_domains",
                      "value": "safe_domains",
                    },
                    Object {
                      "text": "uk_domains",
                      "value": "uk_domains",
                    },
                  ]
                }
                value="safe_domains"
              />
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiExpression>
      </div>
    </EuiPopover>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`ScopeExpression renders when no filter ID or type supplied 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  direction="row"
  gutterSize="m"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    className="scope-field-checkbox"
    component="div"
    grow={false}
  >
    <EuiCheckbox
      checked={true}
      compressed={false}
      disabled={false}
      id="scope_cb_domain"
      indeterminate={false}
      onChange={[Function]}
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiExpressionButton
      buttonValue="domain"
      className="scope-field-button"
      description="when"
      isActive={false}
      onClick={[Function]}
    />
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiExpressionButton
          buttonValue=""
          description="is "
          isActive={false}
          onClick={[Function]}
        />
      }
      closePopover={[Function]}
      hasArrow={true}
      id="operatorValuePopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
      withTitle={true}
    >
      <div
        style={
          Object {
            "zIndex": "200",
          }
        }
      >
        <EuiPopoverTitle>
          Is
        </EuiPopoverTitle>
        <EuiExpression>
          <EuiFlexGroup
            alignItems="stretch"
            component="div"
            direction="row"
            gutterSize="l"
            justifyContent="flexStart"
            responsive={true}
            style={
              Object {
                "maxWidth": 450,
              }
            }
            wrap={false}
          >
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 150,
                }
              }
            >
              <EuiSelect
                compressed={false}
                fullWidth={false}
                hasNoInitialSelection={false}
                isLoading={false}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "text": "in",
                      "value": "include",
                    },
                    Object {
                      "text": "not in",
                      "value": "exclude",
                    },
                  ]
                }
              />
            </EuiFlexItem>
            <EuiFlexItem
              component="div"
              grow={false}
              style={
                Object {
                  "width": 300,
                }
              }
            >
              <EuiSelect
                compressed={false}
                fullWidth={false}
                hasNoInitialSelection={false}
                isLoading={false}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "text": "web_domains",
                      "value": "web_domains",
                    },
                    Object {
                      "text": "safe_domains",
                      "value": "safe_domains",
                    },
                    Object {
                      "text": "uk_domains",
                      "value": "uk_domains",
                    },
                  ]
                }
              />
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiExpression>
      </div>
    </EuiPopover>
  </EuiFlexItem>
</EuiFlexGroup>
`;
